# kreview

./: .dockerignore  .editorconfig  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  build_nbs.py  fix_time_import.py  manifest.txt  mkdocs.yml  pyproject.toml  settings.ini  versions.json
.agents/rules/: code-quality.md  duckdb-patterns.md  fragmentomics-domain.md  git-conventions.md  labeling-hierarchy.md  nbdev-conventions.md  parquet-only.md
.agents/workflows/: add-feature.md  code-review.md  debug-error.md  git-commit.md  git-pr.md  init-project.md  qa-check.md  release.md  run-eval.md  run-labels.md
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/changelog/: index.html
0.0.10/: 404.html  index.html  sitemap.xml
0.0.10/changelog/: index.html
0.0.11/: 404.html  index.html  sitemap.xml
0.0.11/changelog/: index.html
0.0.11/search/: search_index.json
0.0.12/: 404.html  index.html  sitemap.xml
0.0.12/changelog/: index.html
0.0.12/search/: search_index.json
0.0.13/: 404.html  index.html  sitemap.xml
0.0.13/changelog/: index.html
0.0.13/search/: search_index.json
0.0.14/: 404.html  index.html  sitemap.xml
0.0.14/changelog/: index.html
0.0.15/: 404.html  index.html  sitemap.xml
0.0.15/changelog/: index.html
0.0.16/: 404.html  index.html  objects.inv  sitemap.xml
0.0.16/changelog/: index.html
0.0.17/: 404.html  index.html  sitemap.xml
0.0.17/changelog/: index.html
0.0.17/search/: search_index.json
0.0.18/: 404.html  index.html  objects.inv  sitemap.xml
0.0.18/changelog/: index.html
0.0.19/: 404.html  index.html  sitemap.xml
0.0.19/changelog/: index.html
0.0.19/search/: search_index.json
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/changelog/: index.html
0.0.2/search/: search_index.json
0.0.20/: 404.html  index.html  sitemap.xml
0.0.20/changelog/: index.html
0.0.20/search/: search_index.json
0.0.21/: 404.html  index.html  sitemap.xml
0.0.21/changelog/: index.html
0.0.21/search/: search_index.json
0.0.22/: 404.html  index.html  sitemap.xml
0.0.22/changelog/: index.html
0.0.22/search/: search_index.json
0.0.23/: 404.html  index.html  sitemap.xml
0.0.23/changelog/: index.html
0.0.24/: 404.html  index.html  objects.inv  sitemap.xml
0.0.24/changelog/: index.html
0.0.24/search/: search_index.json
0.0.25/: 404.html  index.html  sitemap.xml
0.0.25/changelog/: index.html
0.0.26/: 404.html  index.html  sitemap.xml
0.0.26/changelog/: index.html
0.0.27/: 404.html  index.html  sitemap.xml
0.0.27/changelog/: index.html
0.0.27/search/: search_index.json
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/changelog/: index.html
0.0.3/search/: search_index.json
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/changelog/: index.html
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/changelog/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/changelog/: index.html
0.0.6/stylesheets/: extra.css
0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.7/changelog/: index.html
0.0.7/search/: search_index.json
0.0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.0.8/changelog/: index.html
0.0.8/search/: search_index.json
0.0.9/: 404.html  index.html  sitemap.xml
0.0.9/changelog/: index.html
0.0.9/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/search/: search_index.json
docs/: changelog.md  index.md
docs/api-reference/: cli.md  core.md  eval-engine.md  feature-cards.md  features.md  labels.md  scoreboard.md
docs/biology/: ctdna-labeling.md  fragmentomics-features.md
docs/developer/: adding-a-feature.md  contributing.md  duckdb-architecture.md  nbdev-workflow.md  pipeline-architecture.md  release-guide.md  testing-guide.md
docs/getting-started/: configuration.md  installation.md  pipeline-cli.md
docs/includes/: abbreviations.md
docs/javascripts/: mathjax.js
docs/machine-learning/: dashboard-guide.md  decision-curve-analysis.md  models-and-metrics.md  statistical-tests.md
docs/operations/: ci-cd.md  docker.md  nextflow.md  troubleshooting.md
docs/stylesheets/: extra.css
kreview/: _modidx.py  cli.py  cli_eval.py  cli_select.py  core.py  eval_engine.py  feature_cards.py  labels.py  registry.py  report.py  reproducibility.py  scoreboard.py  selection.py
kreview/features/: atac.py  atac_genomewide.py  breakpoint_motif.py  breakpoint_motif_genomewide.py  endmotif.py  endmotif_1mer.py  endmotif_genomewide.py  fsc_binlevel.py  fsc_binlevel_genomewide.py  fsc_gene.py  fsc_regions.py  fsd.py  fsd_genomewide.py  fsr.py  fsr_genomewide.py  mds.py  mds_exon.py  mds_gene.py  mds_genomewide.py  ocf_offtarget.py  ocf_ontarget.py  tfbs.py  tfbs_genomewide.py  wps_background.py  wps_genomewide.py  wps_panel.py
kreview/templates/: _quarto.yml  custom.scss  footer.html  report_multimodal_template.qmd  report_template.qmd
nbs/: 00_core.ipynb  01_labels.ipynb  02_eval_engine.ipynb  03_registry.ipynb  04_selection.ipynb  05_report.ipynb  90_cli.ipynb  91_cli_eval.ipynb  92_cli_select.ipynb
nbs/features/: 10_fsc_gene.ipynb  11_fsc_binlevel.ipynb  11b_fsc_genomewide.ipynb  12_fsc_regions.ipynb  13_fsd.ipynb  13b_fsd_genomewide.ipynb  14_fsr.ipynb  14b_fsr_genomewide.ipynb  15_ocf_ontarget.ipynb  16_ocf_offtarget.ipynb  17_atac.ipynb  17b_atac_genomewide.ipynb  18_tfbs.ipynb  18b_tfbs_genomewide.ipynb  19_mds.ipynb  19b_mds_genomewide.ipynb  20_mds_gene.ipynb  20b_mds_exon.ipynb  21_endmotif.ipynb  21b_endmotif_genomewide.ipynb  (+7 more)
nextflow/: main.nf  nextflow.config
scripts/: run_hpc.sh  run_hpc_0.8.3.sh  run_hpc_v0.0.10.sh  run_hpc_v0.0.11.sh  run_hpc_v0.0.13.sh  runner.sh
tests/: test_ablation.py  test_cli.py  test_core.py  test_eval_engine.py  test_feature_cards.py  test_fuse.py  test_labels.py  test_merge_helpers.py  test_multimodal_decomposed.py  test_pipeline_parity.py  test_reproducibility.py  test_scoreboard.py  test_selection.py
(+763 files in other folders)
