[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kreview"
dynamic = ["version"]
description = "Evaluate cfDNA fragmentomics features for ctDNA detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Ronak Shah", email = "shahr2@mskcc.org"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "structlog>=23.1.0",
    "typer>=0.9.0",
    "plotly>=5.14.0",
    "quarto-cli>=1.4.0",
    "papermill>=2.5.0",
    "jupyter>=1.0.0",
    "itables>=1.7.0",
    "shap>=0.40.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-typer>=0.0.3",
    "mike>=2.0.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-panzoom-plugin>=0.5.2",
    "mkdocs-pdf>=0.1.2"
]

[project.urls]
Repository = "https://github.com/msk-access/kreview"
Documentation = "https://msk-access.github.io/kreview"

[project.scripts]
kreview = "kreview.cli:app"

[project.entry-points.nbdev]
kreview = "kreview._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "kreview.__version__"}

[tool.setuptools.packages.find]
include = ["kreview"]

[tool.ruff.lint]
ignore = ["E722", "E402", "F401", "F841", "E501"]

[tool.black]
target-version = ["py310"]

[tool.nbdev]
