[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kreview"
dynamic = ["version"]
description = "Evaluate cfDNA fragmentomics features for ctDNA detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [{name = "Ronak Shah", email = "shahr2@mskcc.org"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "structlog>=23.1.0",
    "typer>=0.9.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.1",  # For static plot fallbacks
    "itables>=1.7.0",
    "great_tables>=0.15.0",  # Column-grouped tables (reactable-style)
    "shap>=0.40.0",
    "joblib>=1.3.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "quarto-cli>=1.6.0",
    "mrmr-selection>=0.2.8",
    "BorutaShapPlus>=0.1.3",
    "papermill>=2.5.0",  # Required by Quarto render -P (parameterized dashboards)
]

[project.optional-dependencies]
arfs = [
    "arfs>=2.3.0",
    "lightgbm>=4.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black[jupyter]>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-typer>=0.0.3",
    "mike>=2.0.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-panzoom-plugin>=0.5.2",
    "mkdocs-pdf>=0.1.2"
]
gpu = [
    "torch>=2.0",
    "tabpfn>=8.0.3",
    "shapiq",
    "tabicl[finetune,shap]>=2.1",
]
all = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black[jupyter]>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-typer>=0.0.3",
    "mike>=2.0.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-panzoom-plugin>=0.5.2",
    "mkdocs-pdf>=0.1.2"
]

[project.urls]
Repository = "https://github.com/msk-access/kreview"
Documentation = "https://msk-access.github.io/kreview"

[project.scripts]
kreview = "kreview.cli:app"

[project.entry-points.nbdev]
kreview = "kreview._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "kreview.__version__"}

[tool.setuptools]
include-package-data = true
packages = ["kreview", "kreview.features", "kreview.templates"]

[tool.setuptools.package-data]
"*" = ["*.qmd", "*.css", "*.js", "*.html"]

[tool.ruff.lint]
# E402: module-level import not at top — unavoidable in nbdev-generated code
# F401: imported but unused — nbdev re-exports in __all__ cause this
# E501: line too long — relaxed for readability in data pipelines
# E712: comparison to True/False — pandas boolean indexing uses == True
# E741: ambiguous variable name — some short vars are standard in ML code (X, y, e)
# E701: multiple statements on one line — occasional nbdev pattern
ignore = ["E402", "F401", "E501", "E712", "E741", "E701"]

[tool.ruff.lint.per-file-ignores]
# nbdev test cells reference classes from prior export cells (F821),
# and nbdev splits imports across cells causing redefinitions (F811).
"nbs/**/*.ipynb" = ["F821", "F811"]

[tool.black]
target-version = ["py310"]
# Notebooks are formatted by nbdev_clean, not black directly.
# Running black --check on .ipynb files causes CI flakiness across black versions.
extend-exclude = '''
(
  \.ipynb
)
'''


[tool.nbdev]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["arg-type", "assignment", "var-annotated", "misc", "return-value", "attr-defined", "call-overload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "-q",
]
# Coverage: run explicitly in CI or locally:
#   pytest --cov=kreview --cov-report=xml:coverage.xml --cov-report=term-missing:skip-covered
timeout = 120
log_cli_level = "WARNING"

[tool.coverage.run]
source = ["kreview"]
omit = [
    "kreview/_modidx.py",
    "kreview/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
show_missing = true
